syntax = "proto3";

option go_package = "./;persister";  

// Snapshot 结构定义
message Snapshot {
    bytes rowData = 1;
    int64 lastIndex = 2;
    int64 lastTerm = 3;
}

message State {
    int32 votedFor = 1;
    int64 currentTerm = 2;
}